@@ -4,17 +4,19 @@ AZUREUS VUZE CHANGELOG
 2008.xx.xx | Azureus Vuze 3.0.4.3
 
 FEATURE: Core | Added µTorrent PEX support [amc1]
+FEATURE: Core | Azureus probes trackers for UDP-capabilities on first scrape/announce now and uses udp instead of http where available [The 8472]
 FEATURE: UI   | Added option for "Open Containing Folder" menu action - which may integrate better with non-standard file browsers [amc1]
 FEATURE: UI   | Added option for "Show Torrent Menu" -- Users can now decide to see the Torrent menu in the menubar or not [knguyen]
-FEATURE: UI   | New menu configuration for Vuze and Vuze Advanced UI's [knguyen]
+FEATURE: UIv3 | New menu configuration for Vuze and Vuze Advanced UI's [knguyen]
 
 CHANGE: Core  | Further memory footprint reductions; for additional tweaks see http://www.azureuswiki.com/index.php/Reduce_memory_usage [The 8472]
 CHANGE: Core  | Reimplemented LT extension protocol code [amc1]
 CHANGE: Core  | DND/Compact (aka Delete) priority now deletes all files that do not share pieces with normal/high priority files [The 8472]
 CHANGE: Core  | Queuing rules now don't start any further torrents if the global up/download speed limits are reached [The 8472]
                  - makes "don't count torrent ..." minimum speed rules more useful to dynamically regulate the queue lengths
-                 - prevents runaway chain reactions in case of connection loss
+                 - recovers faster from chain reactions in case of connection loss
 CHANGE: Core  | Made the crypto handshake a bit less predictable [The 8472]
+CHANGE: Core  | Added support for udp-multiscrapes [The 8472]
 CHANGE: Core  | Added support for plugins which implement mainline DHT [amc1]
                  
 BUGFIX: UI    | Shells no longer use the low-res frog icon, the normal main window icon is now used instead [amc1]
